@@ -1,6 +1,7 @@
 = Version History =
 x.x:
 
+- fixed: incorrect context in index_blog widget
 - fixed: blog widget more link in widget
 
 2.2 (2012-03-02):
